@@ -16,6 +16,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
@@ -207,7 +208,7 @@ class PatcherTest {
 
     private FileConfigAccessor createConfigAccessorFromString(final Path tempDir, final String fileName, final String configString) throws IOException, InvalidConfigurationException {
         final Path configFile = tempDir.resolve(fileName);
-        Files.write(configFile, configString.getBytes());
+        Files.writeString(configFile, configString, StandardCharsets.UTF_8);
         return new StandardConfigAccessor(configFile.toFile(), null, null);
     }
 }
